[gd_scene load_steps=2 format=3 uid="uid://b13y6wkodkbq1"]

[ext_resource type="Script" path="res://Script/UI/PropertyInfoItem.gd" id="1_ohx8f"]

[node name="PropertyInfoItem" type="Panel"]
custom_minimum_size = Vector2(0, 100)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
size_flags_horizontal = 3
script = ExtResource("1_ohx8f")

[node name="PropertyInfoItem" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 80)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="PropertyInfoItem"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "攻击力："

[node name="ValueLabel" type="Label" parent="PropertyInfoItem"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
text = "0"
